# termtex

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SPEC.md  ghostty
docs/: SESSION-LOG.md
examples/: equations.tex  pretty-demo.sh
src/: bare.rs  compositor.rs  config.rs  grid.rs  kitty.rs  layout.rs  main.rs  pty.rs  scanner.rs  strip.rs  unicode.rs  watch.rs
src/render/: mod.rs  ratex.rs
tools/: analyze_capture.py
