[package]
name = "termtex"
version = "0.1.0"
edition = "2021"
description = "Render LaTeX math in your terminal — a tiny TeX engine that draws equations as 2-D text (or Kitty-graphics images)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiklausParcell/termtex"
homepage = "https://github.com/NiklausParcell/termtex"
readme = "README.md"
keywords = ["latex", "math", "terminal", "tex", "pty"]
categories = ["command-line-utilities", "mathematics"]
exclude = [
    "docs/",
    "tools/",
    "ghostty",
    "*.log",
    "SPEC.md",
]

[dependencies]
portable-pty = "0.8"
libc = "0.2"
signal-hook = "0.3"
serde_json = "1"
base64 = "0.22"
png = "0.17"
ratex-parser = "0.1.11"
ratex-layout = "0.1.11"
ratex-types = "0.1.11"
ratex-svg = { version = "0.1.11", features = ["standalone", "embed-fonts"] }
resvg = "0.47"
lru = "0.12"

[profile.release]
lto = true
strip = true
